--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -80,7 +80,8 @@ p {
   padding-bottom: 175px;
   padding-left: 120px;
   text-align: left;
-  /* background-image: url(../img/banner-bg.png); 
+  background-image: url(../img/banner-bg.png);
+  /*
   background-color: #a9b9b5;
   */
   background-color: rgba(185, 78, 94, 0.9);
@@ -98,9 +99,11 @@ p {
 }
 
 .left-banner-content h1 {
-  font-size: 64px;
+  font-size: 80px;
   font-weight: 700;
   color: #fff;
+  text-shadow: 1px 1px 2px black, 0 0 25px rgb(60, 76, 146),
+    0 0 5px rgb(28, 65, 134);
   line-height: 70px;
 }
 
@@ -108,6 +111,8 @@ p {
   font-size: 44px;
   font-weight: 500;
   color: #fff;
+  text-shadow: 1px 1px 2px black, 0 0 25px rgb(77, 148, 153),
+    0 0 5px rgb(36, 117, 122);
   line-height: 70px;
 }
 
@@ -212,7 +217,7 @@ p {
   padding-top: 175px;
   padding-bottom: 175px;
   text-align: center;
-  background-image: url(../img/best-offer-bg.png);
+  background-image: url(../img/barbed.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -480,7 +485,7 @@ p {
 
 .testimonial-image {
   text-align: center;
-  background-image: url(../img/testimonial-left-image.png);
+  background-image: url(../img/gate.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
