--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -265,6 +265,7 @@ p {
 
 .best-offer-right-content p {
   margin: 18px 0px;
+  font-size: 18px;
 }
 
 .best-offer-right-content ul {
@@ -295,7 +296,9 @@ p {
   padding-top: 100px;
   padding-bottom: 100px;
   text-align: center;
-  background-image: url(../img/events-bg.png);
+  /*
+  background-image: url(../img/chair.jpg);
+  */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -709,7 +712,7 @@ p {
 }
 
 .contact-us {
-  margin-top: 10px;
+  margin-top: 3900px;
 }
 
 .contact-us #contact {
@@ -720,7 +723,7 @@ p {
   padding-left: 120px;
   padding-right: 120px;
   text-align: center;
-  background-image: url(../img/contact-bg.png);
+  background-image: url(../img/p9.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
